[tool.poetry]
name = "tictactoetest"
version = "0.1.0"
description = ""
authors = ["matt wood <matthew.wood@bjss.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
